Fixed layout issue

--- a/style.css
+++ b/style.css
@@ -1,12 +1,3 @@
-.container {
-  display: flex;
-}
-
-.c-row {
-  margin-top: 2em;
-  margin-bottom: 2em;
-}
-
 /* MUSIC */
 
 .m-box {
